# shiny-system-design

./: .env.example  README.md  architecture.drawio  compose.authentication.yml  docker-bake.hcl  docker-compose.yml  justfile  taskfile.yml  variables.env
authentication/: .env.example  compose.yml
authentication/ldap_admin/: Dockerfile
authentication/ldap_server/: Dockerfile
cache/: compose.yml
cache/kv_database/: Dockerfile
cache/redis/: Dockerfile
monitoring/: compose.yml
monitoring/alloy/: Dockerfile  config.alloy
monitoring/grafana/: Dockerfile  config.json
monitoring/loki/: Dockerfile
monitoring/prometheus/: Dockerfile  prometheus.yml
monitoring/promtail/: Dockerfile  config.yml
monitoring/telemetry/: .dockerignore  Dockerfile  README.md  config.yml  plumber.R
services/: compose.yml
services/api_dispatcher/: .gitignore  Dockerfile  pyproject.toml
services/api_dispatcher/app/: background.py  db.py  logger.py  main.py  models.py
services/api_dispatcher/tests/app/: test_main.py
services/classification/: Dockerfile
services/express_api/: Dockerfile  index.js  package-lock.json  package.json
services/fastapi_api/: .dockerignore  main.py  pyproject.toml
services/gin_api/: Dockerfile  go.mod  main.go
services/oxygen_api/: Dockerfile  app.jl
services/plumber_api/: Dockerfile  app.R  plumber.R
services/python/: pyproject.toml
services/spring_api/: Dockerfile  pom.xml
shinyproxy/: compose.yml
shinyproxy/analytics/: .dockerignore  Dockerfile  app.R
shinyproxy/app/: .dockerignore  DESCRIPTION  Dockerfile  app.R
(+29 files in other folders)
